...
import { useStorage } from '../../hooks/context/useStorage';
import { useFocusEffect, useRoute, RouteProp } from '@react-navigation/native';
import { LightningTransaction } from '../../class/wallets/types/LightningTransaction';
import { Transaction } from '../../class/wallets/types/Transaction';
import { TWallet } from '../../class/wallets/types/TWallet';
import { DetailViewStackParamList } from '../../navigation/DetailViewStackParamList';
import HeaderMenuButton from '../../components/HeaderMenuButton';
import { Action } from '../../components/types';
import { CommonToolTipActions } from '../../typings/CommonToolTipActions';
import { unlockWithBiometrics } from '@/src/hooks/utils/biometrics';
import { popToTop } from '../../NavigationService';
import { HDSegwitBech32Wallet } from '@/src/class/wallets/hd-segwit-bech32-wallet';
import { LegacyWallet } from '@/src/class/wallets/legacy-wallet';
import { SegwitBech32Wallet } from '@/src/class/wallets/segwit-bech32-wallet';
import { SegwitP2SHWallet } from '@/src/class/wallets/segwit-p2sh-wallet';
import { WatchOnlyWallet } from '@/src/class/wallets/watch-only-wallet';
import { MultisigHDWallet } from '@/src/class/wallets/multisig-hd-wallet';
import { EthereumWallet } from '@/src/class/wallets/ethereum-wallet';

type RouteProps = RouteProp<DetailViewStackParamList, 'WalletDetails'>;
const WalletDetails: React.FC = () => {
  const { saveToDisk, wallets, setSelectedWalletID, txMetadata, handleWalletDeletion } = useStorage();
  const { isBiometricUseCapableAndEnabled } = useBiometrics();
  const { walletID } = useRoute<RouteProps>().params;
  const [isLoading, setIsLoading] = useState<boolean>(false);
  const [backdoorPressed, setBackdoorPressed] = useState<number>(0);
...
