...
  SortASC: 'sortASC',
  SortDESC: 'sortDESC',
  SortHeight: 'sortHeight',
  SortValue: 'sortValue',
  SortLabel: 'sortLabel',
  SortStatus: 'sortStatus',
  Delete: 'delete',
} as const;

const icons = {
  Eye: { iconValue: 'eye' },
  EyeSlash: { iconValue: 'eye.slash' },
  Link: { iconValue: 'link' },
...
