appId: com.harry-expo.bluewallet
---
- runFlow: "assert-create-wallet.yaml"
- tapOn:
    id: "CreateAWallet"
- runFlow: "input-wallet-name.yaml"
- tapOn:
    id: "ActivateBitcoinButton"
    enabled: true
- tapOn:
    id: "Create"
    enabled: true
- extendedWaitUntil:
    visible:
        id: "PleaseBackupScrollView"
- scrollUntilVisible:
    element:
      id: "PleasebackupOk"
    direction: DOWN
    timeout: 20000
- tapOn:
    id: "PleasebackupOk"
- runFlow: "assert-wallet-exists.yaml"
